## Purpose: The automake makefile for wxWindows (misc/afm direcotry)
## Author:  Phil Blecker, Vadim Zeitlin
## Version: $Id$
##
## Process this file with automake to produce Makefile.in

afmdir = $(datadir)/wx/afm
afm_DATA = \
  Cour.afm \
  CourBo.afm \
  CourBoO.afm \
  CourO.afm \
  Helv.afm \
  HelvBo.afm \
  HelvBoO.afm \
  HelvO.afm \
  TimesRo.afm \
  TimesBo.afm \
  TimesBoO.afm \
  TimesO.afm

