## Purpose: The automake makefile for wxWindows (misc/gs_afm direcotry)
## Author:  Phil Blecker, Vadim Zeitlin
## Version: $Id$
##
## Process this file with automake to produce Makefile.in

gs_afmdir = $(datadir)/wx/gs_afm
gs_afm_DATA = \
  Cour.afm \
  CourBo.afm \
  CourBoO.afm \
  CourO.afm \
  Helv.afm \
  HelvBo.afm \
  HelvBoO.afm \
  HelvO.afm \
  TimesRo.afm \
  TimesBo.afm \
  TimesBoO.afm \
  TimesO.afm

